Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -203,6 +203,8 @@ Error message and password prompt
 
 <li>$:/state/toc/Contents-Advice-1843068618</li>
 
+<li>$:/state/toc/Contents-Book Notes-1843068618</li>
+
 <li>$:/state/toc/Contents-Quotes-1843068618</li>
 
 <li>$:/status/RequireReloadDueToPluginChange</li>
@@ -227,9 +229,13 @@ Error message and password prompt
 
 <li>All</li>
 
+<li>Book Notes</li>
+
 <li>Contents</li>
 
 <li>Home</li>
+
+<li>Inadequate Equilibria: Where and How Civilizations Get Stuck</li>
 
 <li>new note</li>
 
@@ -9716,11 +9722,11 @@ Error message and password prompt
 <div created="20200725033557403" modified="20200725033603729" title="$:/state/tab-1335562222">
 <pre>$:/core/ui/TiddlerInfo/Advanced</pre>
 </div>
-<div created="20200723095304272" modified="20200725043844503" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Info</pre>
+<div created="20200723095304272" modified="20200819051510990" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
-<div created="20200723095306405" modified="20200723121422935" title="$:/state/tab-2065006209">
-<pre>$:/core/ui/ControlPanel/Saving/General</pre>
+<div created="20200723095306405" modified="20200819051511793" title="$:/state/tab-2065006209">
+<pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
 <div created="20200725033610982" modified="20200725033627148" title="$:/state/tab-370012239">
 <pre>$:/core/ui/TiddlerInfo/References</pre>
@@ -9737,13 +9743,16 @@ Error message and password prompt
 <div created="20200725045204458" modified="20200726072855462" title="$:/state/toc/Contents-Advice-1843068618">
 <pre>open</pre>
 </div>
+<div created="20200819051324103" modified="20200819051324103" title="$:/state/toc/Contents-Book Notes-1843068618">
+<pre>open</pre>
+</div>
 <div created="20200726073021428" modified="20200726073021428" title="$:/state/toc/Contents-Quotes-1843068618">
 <pre>open</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200808014824337" list="Home Quotes [[Philosopher's Syndrome]] Tyrannies" modified="20200808014830657" title="$:/StoryList">
+<div created="20200819051141684" list="$:/ControlPanel Home Recipes [[new note]] [[Book Notes]] [[Inadequate Equilibria: Where and How Civilizations Get Stuck]] All Quotes [[Philosopher's Syndrome]]" modified="20200819051505030" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200723115340068" modified="20200723115349355" title="$:/temp/advancedsearch">
@@ -9794,11 +9803,11 @@ Error message and password prompt
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;2560&quot;
+            &quot;text&quot;: &quot;1440&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;1440&quot;
+            &quot;text&quot;: &quot;900&quot;
         },
         &quot;$:/info/browser/language&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/language&quot;,
@@ -9934,6 +9943,9 @@ Error message and password prompt
 <pre>All Links
 &lt;&lt;list-links &quot; [!is[system]]&quot;&gt;&gt;</pre>
 </div>
+<div created="20200819051254975" modified="20200819051401523" tags="Contents" title="Book Notes">
+<pre>&lt;&lt;list-links &quot;[tag[Book Notes]]&quot;&gt;&gt;</pre>
+</div>
 <div caption="Contents" created="20200725044457412" list-after="$:/core/ui/SideBar/Open" modified="20200725045151064" tags="$:/tags/SideBar" title="Contents">
 <pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
 
@@ -9941,12 +9953,18 @@ Error message and password prompt
 
 &lt;/div&gt;</pre>
 </div>
-<div created="20200725033150935" modified="20200726072631336" tags="" title="Home">
+<div created="20200725033150935" modified="20200819051216888" tags="" title="Home">
 <pre>View [[All]]
 
 * [[Recipes]]
 * [[Advice]]
-* [[Quotes]]</pre>
+* [[Quotes]]
+* [[Book Notes]]</pre>
+</div>
+<div created="20200819051302378" modified="20200819051452495" tags="[[Book Notes]]" title="Inadequate Equilibria: Where and How Civilizations Get Stuck">
+<pre>Eliezer Yudkowsky
+
+If you want to outperform—if you want to do anything not usually done—then you’ll need to conceptually divide our civilization into areas of lower and greater competency. My view is that this is best done from a framework of incentives and the equilibria of those incentives—which is to say, from the standpoint of microeconomics.</pre>
 </div>
 <div created="20200723113657136" modified="20200723115253061" tags="recipe" title="new note">
 <pre></pre>
