Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -9752,7 +9752,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200819051141684" list="$:/ControlPanel Home Recipes [[new note]] [[Book Notes]] [[Inadequate Equilibria: Where and How Civilizations Get Stuck]] All Quotes [[Philosopher's Syndrome]]" modified="20200819051505030" title="$:/StoryList">
+<div created="20200819051141684" list="Home Recipes [[new note]] [[Book Notes]] [[Inadequate Equilibria: Where and How Civilizations Get Stuck]] All Quotes [[Philosopher's Syndrome]]" modified="20200819051505030" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200723115340068" modified="20200723115349355" title="$:/temp/advancedsearch">
@@ -9961,10 +9961,11 @@ Error message and password prompt
 * [[Quotes]]
 * [[Book Notes]]</pre>
 </div>
-<div created="20200819051302378" modified="20200819051452495" tags="[[Book Notes]]" title="Inadequate Equilibria: Where and How Civilizations Get Stuck">
+<div created="20200819051302378" modified="20200819051828741" tags="[[Book Notes]]" title="Inadequate Equilibria: Where and How Civilizations Get Stuck">
 <pre>Eliezer Yudkowsky
 
-If you want to outperform—if you want to do anything not usually done—then you’ll need to conceptually divide our civilization into areas of lower and greater competency. My view is that this is best done from a framework of incentives and the equilibria of those incentives—which is to say, from the standpoint of microeconomics.</pre>
+If you want to outperform—if you want to do anything not usually done—then you’ll need to conceptually divide our civilization into areas of lower and greater competency. My view is that this is best done from a framework of incentives and the equilibria of those incentives—which is to say, from the standpoint of microeconomics.
+I will also make the case that modesty—the part of this process where you go into an agonizing fit of self-doubt—isn’t actually helpful for figuring out when you might outperform some aspect of the equilibrium.</pre>
 </div>
 <div created="20200723113657136" modified="20200723115253061" tags="recipe" title="new note">
 <pre></pre>
