--- a/index.html
+++ b/index.html
@@ -9961,11 +9961,19 @@ Error message and password prompt
 * [[Quotes]]
 * [[Book Notes]]</pre>
 </div>
-<div created="20200819051302378" modified="20200819051828741" tags="[[Book Notes]]" title="Inadequate Equilibria: Where and How Civilizations Get Stuck">
+<div created="20200819051302378" modified="20200819061327496" tags="[[Book Notes]]" title="Inadequate Equilibria: Where and How Civilizations Get Stuck">
 <pre>Eliezer Yudkowsky
 
 If you want to outperform—if you want to do anything not usually done—then you’ll need to conceptually divide our civilization into areas of lower and greater competency. My view is that this is best done from a framework of incentives and the equilibria of those incentives—which is to say, from the standpoint of microeconomics.
-I will also make the case that modesty—the part of this process where you go into an agonizing fit of self-doubt—isn’t actually helpful for figuring out when you might outperform some aspect of the equilibrium.</pre>
+I will also make the case that modesty—the part of this process where you go into an agonizing fit of self-doubt—isn’t actually helpful for figuring out when you might outperform some aspect of the equilibrium.
+
+adequacy—whether all the low-hanging fruit have been plucked
+
+In the same way that inefficient markets tend systematically to be inexploitable, grossly inadequate systems tend systematically to be unfixable by individual non-billionaires.
+
+So inadequacy is even more important than exploitability on a day-to-day basis, because it’s inadequacy-generating situations that lead to low-hanging fruits large enough to be worthwhile at the individual level
+
+even systems that are horribly inadequate from our own perspective are still in a competitive equilibrium. </pre>
 </div>
 <div created="20200723113657136" modified="20200723115253061" tags="recipe" title="new note">
 <pre></pre>
