Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -9961,7 +9961,7 @@ Error message and password prompt
 * [[Quotes]]
 * [[Book Notes]]</pre>
 </div>
-<div created="20200819051302378" modified="20200819061327496" tags="[[Book Notes]]" title="Inadequate Equilibria: Where and How Civilizations Get Stuck">
+<div created="20200819051302378" modified="20200819065312735" tags="[[Book Notes]]" title="Inadequate Equilibria: Where and How Civilizations Get Stuck">
 <pre>Eliezer Yudkowsky
 
 If you want to outperform—if you want to do anything not usually done—then you’ll need to conceptually divide our civilization into areas of lower and greater competency. My view is that this is best done from a framework of incentives and the equilibria of those incentives—which is to say, from the standpoint of microeconomics.
@@ -9973,7 +9973,27 @@ In the same way that inefficient markets tend systematically to be inexploitable
 
 So inadequacy is even more important than exploitability on a day-to-day basis, because it’s inadequacy-generating situations that lead to low-hanging fruits large enough to be worthwhile at the individual level
 
-even systems that are horribly inadequate from our own perspective are still in a competitive equilibrium. </pre>
+even systems that are horribly inadequate from our own perspective are still in a competitive equilibrium. 
+
+What inadequate systems and efficient markets have in common is the lack of any free energy in the equilibrium. We can see the equilibrium in both cases as defined by an absence of free energy. 
+
+In a way, it’s this very lack of free energy, this intense competition without space to draw a breath, that keeps the inadequacy around and makes it non- fragile. 
+
+Adequacy arguments are ubiquitous, and they’re much more common in everyday reasoning than arguments about efficiency or exploitability.
+
+Systems tend to be inexploitable with respect to the resources that large
+ecosystems of competent agents are trying their hardest to pursue, like fame and money, regardless of how adequate or inadequate they are. 
+
+3 Categories of inadequate systems -
+1. Decisionmakers who are not beneficiaries; 
+2. Asymmetric information;
+and above all,
+3. Nash equilibria that aren’t even the best Nash equilibrium, let alone Pareto-optimal.
+In other words:
+1. Cases where the decision lies in the hands of people who would gain little personally, or lose out personally, if they did what was necessary to help someone else;
+2. Cases where decision-makers can’t reliably learn the information they need to make decisions, even though someone else has that information; and
+3. Systems that are broken in multiple places so that no one actor can make them better, even though, in principle, some magically coordinated action could move to a new stable state.
+</pre>
 </div>
 <div created="20200723113657136" modified="20200723115253061" tags="recipe" title="new note">
 <pre></pre>
