Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -233,6 +233,8 @@ Error message and password prompt
 
 <li>Contents</li>
 
+<li>Draft of 'New Tiddler'</li>
+
 <li>Home</li>
 
 <li>Inadequate Equilibria: Where and How Civilizations Get Stuck</li>
@@ -9752,7 +9754,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200916114214497" list="$:/ControlPanel Home" modified="20200916114214497" title="$:/StoryList">
+<div created="20200916114414219" list="Quotes [[Draft of 'New Tiddler']] Home" modified="20200916114414219" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200723115340068" modified="20200723115349355" title="$:/temp/advancedsearch">
@@ -9952,6 +9954,9 @@ Error message and password prompt
 &lt;&lt;toc-selective-expandable 'Contents'&gt;&gt;
 
 &lt;/div&gt;</pre>
+</div>
+<div created="20200916114415550" draft.of="New Tiddler" draft.title="New Tiddler" modified="20200916114415550" tags="Quotes" title="Draft of 'New Tiddler'">
+<pre></pre>
 </div>
 <div created="20200725033150935" modified="20200819051216888" tags="" title="Home">
 <pre>View [[All]]
