Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -9724,10 +9724,10 @@ Error message and password prompt
 <div created="20200725033557403" modified="20200725033603729" title="$:/state/tab-1335562222">
 <pre>$:/core/ui/TiddlerInfo/Advanced</pre>
 </div>
-<div created="20200723095304272" modified="20200819051510990" title="$:/state/tab-1749438307">
+<div created="20200723095304272" modified="20200916114521540" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
-<div created="20200723095306405" modified="20200819051511793" title="$:/state/tab-2065006209">
+<div created="20200723095306405" modified="20200916114524919" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
 <div created="20200725033610982" modified="20200725033627148" title="$:/state/tab-370012239">
@@ -9754,7 +9754,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200916114414219" list="Quotes [[Draft of 'New Tiddler']] Home" modified="20200916114414219" title="$:/StoryList">
+<div created="20200916114519397" list="$:/ControlPanel Home Quotes [[Draft of 'New Tiddler']]" modified="20200916114531664" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200723115340068" modified="20200723115349355" title="$:/temp/advancedsearch">
@@ -9955,8 +9955,19 @@ Error message and password prompt
 
 &lt;/div&gt;</pre>
 </div>
-<div created="20200916114415550" draft.of="New Tiddler" draft.title="New Tiddler" modified="20200916114415550" tags="Quotes" title="Draft of 'New Tiddler'">
-<pre></pre>
+<div created="20200916114415550" draft.of="New Tiddler" draft.title="Murray Gell-Mann Amnesia Effect" modified="20200916114549764" tags="Quotes" title="Draft of 'New Tiddler'">
+<pre>Media carries with it a credibility that is totally undeserved. You have all experienced this, in what I call the Murray Gell-Mann Amnesia effect. (I call it by this name because I once discussed it with Murray Gell-Mann, and by dropping a famous name I imply greater importance to myself, and to the effect, than it would otherwise have.)
+
+Briefly stated, the Gell-Mann Amnesia effect works as follows. You open the newspaper to an article on some subject you know well. In Murray’s case, physics. In mine, show business. You read the article and see the journalist has absolutely no understanding of either the facts or the issues. Often, the article is so wrong it actually presents the story backward-reversing cause and effect. I call these the “wet streets cause rain” stories. Paper’s full of them.
+
+In any case, you read with exasperation or amusement the multiple errors in a story-and then turn the page to national or international affairs, and read with renewed interest as if the rest of the newspaper was somehow more accurate about far-off Palestine than it was about the story you just read. You turn the page, and forget what you know.
+
+That is the Gell-Mann Amnesia effect. I’d point out it does not operate in other arenas of life. In ordinary life, if somebody consistently exaggerates or lies to you, you soon discount everything they say. In court, there is the legal doctrine of falsus in uno, falsus in omnibus, which means untruthful in one part, untruthful in all.
+
+But when it comes to the media, we believe against evidence that it is probably worth our time to read other parts of the paper. When, in fact, it almost certainly isn’t. The only possible explanation for our behavior is amnesia.
+
+Michael Crichton - Why Speculate? (2002)
+</pre>
 </div>
 <div created="20200725033150935" modified="20200819051216888" tags="" title="Home">
 <pre>View [[All]]
