--- a/index.html
+++ b/index.html
@@ -255,8 +255,6 @@ Error message and password prompt
 
 <li>test save</li>
 
-<li>test2</li>
-
 <li>The Strength of Conformism</li>
 
 <li>Tyrannies</li>
@@ -9756,7 +9754,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20230722111935008" list="$:/ControlPanel Home" modified="20230722111935008" title="$:/StoryList">
+<div created="20230722112714022" list="$:/ControlPanel Home" modified="20230722112714022" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200723115340068" modified="20200723115349355" title="$:/temp/advancedsearch">
@@ -9775,27 +9773,27 @@ Error message and password prompt
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;http://127.0.0.1:5500/index.html&quot;
+            &quot;text&quot;: &quot;file:///C:/Users/Alex/Documents/wiki/index.html&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
-            &quot;text&quot;: &quot;127.0.0.1:5500&quot;
+            &quot;text&quot;: &quot;&quot;
         },
         &quot;$:/info/url/hostname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/hostname&quot;,
-            &quot;text&quot;: &quot;127.0.0.1&quot;
+            &quot;text&quot;: &quot;&quot;
         },
         &quot;$:/info/url/protocol&quot;: {
             &quot;title&quot;: &quot;$:/info/url/protocol&quot;,
-            &quot;text&quot;: &quot;http:&quot;
+            &quot;text&quot;: &quot;file:&quot;
         },
         &quot;$:/info/url/port&quot;: {
             &quot;title&quot;: &quot;$:/info/url/port&quot;,
-            &quot;text&quot;: &quot;5500&quot;
+            &quot;text&quot;: &quot;&quot;
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/index.html&quot;
+            &quot;text&quot;: &quot;/C:/Users/Alex/Documents/wiki/index.html&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -9803,7 +9801,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/origin&quot;: {
             &quot;title&quot;: &quot;$:/info/url/origin&quot;,
-            &quot;text&quot;: &quot;http://127.0.0.1:5500&quot;
+            &quot;text&quot;: &quot;file://&quot;
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
@@ -10044,9 +10042,6 @@ Daniel C. Dennett, Consciousness Explained</pre>
 <pre>test contents</pre>
 </div>
 <div created="20200723104824636" modified="20200723115530747" tags="recipe" title="test save">
-<pre></pre>
-</div>
-<div created="20230722111855952" modified="20230722111911234" tags="" title="test2">
 <pre></pre>
 </div>
 <div created="20200724234223207" modified="20200724234443764" tags="" title="The Strength of Conformism">
