--- a/index.html
+++ b/index.html
@@ -233,6 +233,8 @@ Error message and password prompt
 
 <li>Contents</li>
 
+<li>Draft of 'new note'</li>
+
 <li>Draft of 'New Tiddler'</li>
 
 <li>Home</li>
@@ -9754,7 +9756,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20230722112714022" list="$:/ControlPanel Home" modified="20230722112714022" title="$:/StoryList">
+<div created="20230722112917933" list="Home All [[Draft of 'new note']]" modified="20230722112920019" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200723115340068" modified="20200723115349355" title="$:/temp/advancedsearch">
@@ -9954,6 +9956,9 @@ Error message and password prompt
 &lt;&lt;toc-selective-expandable 'Contents'&gt;&gt;
 
 &lt;/div&gt;</pre>
+</div>
+<div created="20200723113657136" draft.of="new note" draft.title="new note" modified="20230722112926170" tags="recipe" title="Draft of 'new note'">
+<pre>test save</pre>
 </div>
 <div created="20200916114415550" draft.of="New Tiddler" draft.title="Murray Gell-Mann Amnesia Effect" modified="20200916114549764" tags="Quotes" title="Draft of 'New Tiddler'">
 <pre>Media carries with it a credibility that is totally undeserved. You have all experienced this, in what I call the Murray Gell-Mann Amnesia effect. (I call it by this name because I once discussed it with Murray Gell-Mann, and by dropping a famous name I imply greater importance to myself, and to the effect, than it would otherwise have.)
