Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -251,10 +251,6 @@ Error message and password prompt
 
 <li>Sturgeon's law</li>
 
-<li>test</li>
-
-<li>test save</li>
-
 <li>The Strength of Conformism</li>
 
 <li>Tyrannies</li>
@@ -9754,7 +9750,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20230722113144893" list="$:/ControlPanel Home All" modified="20230722113152517" title="$:/StoryList">
+<div created="20230722113329178" list="$:/ControlPanel Home All" modified="20230722113344264" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200723115340068" modified="20200723115349355" title="$:/temp/advancedsearch">
@@ -9773,19 +9769,19 @@ Error message and password prompt
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;file:///C:/Users/Alex/Documents/wiki/index.html&quot;
+            &quot;text&quot;: &quot;https://ajshopov.github.io/wiki/&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
-            &quot;text&quot;: &quot;&quot;
+            &quot;text&quot;: &quot;ajshopov.github.io&quot;
         },
         &quot;$:/info/url/hostname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/hostname&quot;,
-            &quot;text&quot;: &quot;&quot;
+            &quot;text&quot;: &quot;ajshopov.github.io&quot;
         },
         &quot;$:/info/url/protocol&quot;: {
             &quot;title&quot;: &quot;$:/info/url/protocol&quot;,
-            &quot;text&quot;: &quot;file:&quot;
+            &quot;text&quot;: &quot;https:&quot;
         },
         &quot;$:/info/url/port&quot;: {
             &quot;title&quot;: &quot;$:/info/url/port&quot;,
@@ -9793,7 +9789,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/C:/Users/Alex/Documents/wiki/index.html&quot;
+            &quot;text&quot;: &quot;/wiki/&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -9801,7 +9797,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/origin&quot;: {
             &quot;title&quot;: &quot;$:/info/url/origin&quot;,
-            &quot;text&quot;: &quot;file://&quot;
+            &quot;text&quot;: &quot;https://ajshopov.github.io&quot;
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
@@ -10037,12 +10033,6 @@ Daniel C. Dennett, Consciousness Explained</pre>
 <div created="20200723114952332" modified="20200723115014722" tags="" title="Sturgeon's law">
 <pre>Ninety percent of everything is crap
 - Theodore Sturgeon</pre>
-</div>
-<div created="20200725045153185" modified="20200725045203100" tags="Advice" title="test">
-<pre>test contents</pre>
-</div>
-<div created="20200723104824636" modified="20200723115530747" tags="recipe" title="test save">
-<pre></pre>
 </div>
 <div created="20200724234223207" modified="20200724234443764" tags="" title="The Strength of Conformism">
 <pre>I sometimes ask students what their position on slavery would have been had they been white and living in the South before abolition. Guess what? They all would have been abolitionists! They all would have bravely spoken out against slavery, and worked tirelessly against it.
