Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -205,6 +205,8 @@ Error message and password prompt
 
 <li>$:/state/toc/Contents-Book Notes-1843068618</li>
 
+<li>$:/state/toc/Contents-Quotes-1637712383</li>
+
 <li>$:/state/toc/Contents-Quotes-1843068618</li>
 
 <li>$:/status/RequireReloadDueToPluginChange</li>
@@ -233,13 +235,9 @@ Error message and password prompt
 
 <li>Contents</li>
 
-<li>Draft of 'New Tiddler'</li>
-
 <li>Home</li>
 
-<li>Inadequate Equilibria: Where and How Civilizations Get Stuck</li>
-
-<li>new note</li>
+<li>Murray Gell-Mann Amnesia Effect</li>
 
 <li>New Vaccine History</li>
 
@@ -9735,13 +9733,16 @@ Error message and password prompt
 <div created="20200723113655040" modified="20200726073020535" title="$:/state/tab/sidebar--595412856">
 <pre>Contents</pre>
 </div>
-<div created="20200726072840939" modified="20200726072841461" title="$:/state/toc/Contents-Advice-1637712383">
-<pre>close</pre>
+<div created="20200726072840939" modified="20230722114213179" title="$:/state/toc/Contents-Advice-1637712383">
+<pre>open</pre>
 </div>
 <div created="20200725045204458" modified="20200726072855462" title="$:/state/toc/Contents-Advice-1843068618">
 <pre>open</pre>
 </div>
 <div created="20200819051324103" modified="20200819051324103" title="$:/state/toc/Contents-Book Notes-1843068618">
+<pre>open</pre>
+</div>
+<div created="20230722114214477" modified="20230722114214477" title="$:/state/toc/Contents-Quotes-1637712383">
 <pre>open</pre>
 </div>
 <div created="20200726073021428" modified="20200726073021428" title="$:/state/toc/Contents-Quotes-1843068618">
@@ -9750,7 +9751,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20230722113329178" list="$:/ControlPanel Home All" modified="20230722113344264" title="$:/StoryList">
+<div created="20230722114150139" list="Home All [[Murray Gell-Mann Amnesia Effect]] Contents [[New Vaccine History]] [[The Strength of Conformism]] [[Sturgeon's law]] [[Book Notes]]" modified="20230722114217027" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200723115340068" modified="20200723115349355" title="$:/temp/advancedsearch">
@@ -9951,7 +9952,15 @@ Error message and password prompt
 
 &lt;/div&gt;</pre>
 </div>
-<div created="20200916114415550" draft.of="New Tiddler" draft.title="Murray Gell-Mann Amnesia Effect" modified="20200916114549764" tags="Quotes" title="Draft of 'New Tiddler'">
+<div created="20200725033150935" modified="20200819051216888" tags="" title="Home">
+<pre>View [[All]]
+
+* [[Recipes]]
+* [[Advice]]
+* [[Quotes]]
+* [[Book Notes]]</pre>
+</div>
+<div created="20200916114415550" modified="20230722114219860" tags="Quotes" title="Murray Gell-Mann Amnesia Effect">
 <pre>Media carries with it a credibility that is totally undeserved. You have all experienced this, in what I call the Murray Gell-Mann Amnesia effect. (I call it by this name because I once discussed it with Murray Gell-Mann, and by dropping a famous name I imply greater importance to myself, and to the effect, than it would otherwise have.)
 
 Briefly stated, the Gell-Mann Amnesia effect works as follows. You open the newspaper to an article on some subject you know well. In Murray’s case, physics. In mine, show business. You read the article and see the journalist has absolutely no understanding of either the facts or the issues. Often, the article is so wrong it actually presents the story backward-reversing cause and effect. I call these the “wet streets cause rain” stories. Paper’s full of them.
@@ -9964,51 +9973,6 @@ But when it comes to the media, we believe against evidence that it is probably 
 
 Michael Crichton - Why Speculate? (2002)
 </pre>
-</div>
-<div created="20200725033150935" modified="20200819051216888" tags="" title="Home">
-<pre>View [[All]]
-
-* [[Recipes]]
-* [[Advice]]
-* [[Quotes]]
-* [[Book Notes]]</pre>
-</div>
-<div created="20200819051302378" modified="20200819065312735" tags="[[Book Notes]]" title="Inadequate Equilibria: Where and How Civilizations Get Stuck">
-<pre>Eliezer Yudkowsky
-
-If you want to outperform—if you want to do anything not usually done—then you’ll need to conceptually divide our civilization into areas of lower and greater competency. My view is that this is best done from a framework of incentives and the equilibria of those incentives—which is to say, from the standpoint of microeconomics.
-I will also make the case that modesty—the part of this process where you go into an agonizing fit of self-doubt—isn’t actually helpful for figuring out when you might outperform some aspect of the equilibrium.
-
-adequacy—whether all the low-hanging fruit have been plucked
-
-In the same way that inefficient markets tend systematically to be inexploitable, grossly inadequate systems tend systematically to be unfixable by individual non-billionaires.
-
-So inadequacy is even more important than exploitability on a day-to-day basis, because it’s inadequacy-generating situations that lead to low-hanging fruits large enough to be worthwhile at the individual level
-
-even systems that are horribly inadequate from our own perspective are still in a competitive equilibrium. 
-
-What inadequate systems and efficient markets have in common is the lack of any free energy in the equilibrium. We can see the equilibrium in both cases as defined by an absence of free energy. 
-
-In a way, it’s this very lack of free energy, this intense competition without space to draw a breath, that keeps the inadequacy around and makes it non- fragile. 
-
-Adequacy arguments are ubiquitous, and they’re much more common in everyday reasoning than arguments about efficiency or exploitability.
-
-Systems tend to be inexploitable with respect to the resources that large
-ecosystems of competent agents are trying their hardest to pursue, like fame and money, regardless of how adequate or inadequate they are. 
-
-3 Categories of inadequate systems -
-1. Decisionmakers who are not beneficiaries; 
-2. Asymmetric information;
-and above all,
-3. Nash equilibria that aren’t even the best Nash equilibrium, let alone Pareto-optimal.
-In other words:
-1. Cases where the decision lies in the hands of people who would gain little personally, or lose out personally, if they did what was necessary to help someone else;
-2. Cases where decision-makers can’t reliably learn the information they need to make decisions, even though someone else has that information; and
-3. Systems that are broken in multiple places so that no one actor can make them better, even though, in principle, some magically coordinated action could move to a new stable state.
-</pre>
-</div>
-<div created="20200723113657136" modified="20200723115253061" tags="recipe" title="new note">
-<pre></pre>
 </div>
 <div bag="default" created="20200723075438193" modified="20200802070254474" revision="0" tags="covid vaccine" title="New Vaccine History" type="text/vnd.tiddlywiki">
 <pre>Let me just give you one data point. ''In the last quarter century, there have only been seven, truly new vaccines introduced globally at the clinical practice. When I say new, that means that they were effective against a pathogen for which there had previously been no vaccine. They're only seven in the last quarter century, Merck has four, the rest of the world has three.'' I don't mean to boast. And there are lots of things that we've been working on since the eighties. We've been trying to get an HIV vaccine since the 1980s and we've been unsuccessful.
