Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -9751,7 +9751,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20230722114150139" list="Home All [[Murray Gell-Mann Amnesia Effect]] Contents [[New Vaccine History]] [[The Strength of Conformism]] [[Sturgeon's law]] [[Book Notes]]" modified="20230722114217027" title="$:/StoryList">
+<div created="20230722115155123" list="Home [[Book Notes]] Recipes" modified="20230722115254637" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200723115340068" modified="20200723115349355" title="$:/temp/advancedsearch">
