--- a/index.html
+++ b/index.html
@@ -235,6 +235,8 @@ Error message and password prompt
 
 <li>Contents</li>
 
+<li>Design in Grayscale</li>
+
 <li>Home</li>
 
 <li>Murray Gell-Mann Amnesia Effect</li>
@@ -9751,7 +9753,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20230722115155123" list="Home [[Book Notes]] Recipes" modified="20230722115254637" title="$:/StoryList">
+<div list="[[Design in Grayscale]] Home" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200723115340068" modified="20200723115349355" title="$:/temp/advancedsearch">
@@ -9815,7 +9817,7 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200723115238278" modified="20200726072933946" title="$:/temp/NewTagName">
+<div created="20200723115238278" modified="20230830045030251" title="$:/temp/NewTagName">
 <pre></pre>
 </div>
 <div created="20200723115307577" modified="20200725033729687" title="$:/temp/search">
@@ -9951,6 +9953,12 @@ Error message and password prompt
 &lt;&lt;toc-selective-expandable 'Contents'&gt;&gt;
 
 &lt;/div&gt;</pre>
+</div>
+<div created="20230830044944610" modified="20230830045054727" tags="Design" title="Design in Grayscale">
+<pre>By designing in grayscale, you’re forced to use spacing, contrast, and size to
+do all of the heavy lifting.
+
+Refactoring UI</pre>
 </div>
 <div created="20200725033150935" modified="20200819051216888" tags="" title="Home">
 <pre>View [[All]]
