--- a/index.html
+++ b/index.html
@@ -9732,8 +9732,8 @@ Error message and password prompt
 <div created="20200723114511720" modified="20200725045224358" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Tags</pre>
 </div>
-<div created="20200723113655040" modified="20200726073020535" title="$:/state/tab/sidebar--595412856">
-<pre>Contents</pre>
+<div created="20200723113655040" modified="20230830045325543" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/Open</pre>
 </div>
 <div created="20200726072840939" modified="20230722114213179" title="$:/state/toc/Contents-Advice-1637712383">
 <pre>open</pre>
@@ -9753,7 +9753,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div list="[[Design in Grayscale]] Home" title="$:/StoryList">
+<div created="20230830045327782" list="Home All [[New Vaccine History]]" modified="20230830045331260" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200723115340068" modified="20200723115349355" title="$:/temp/advancedsearch">
@@ -9982,7 +9982,7 @@ But when it comes to the media, we believe against evidence that it is probably 
 Michael Crichton - Why Speculate? (2002)
 </pre>
 </div>
-<div bag="default" created="20200723075438193" modified="20200802070254474" revision="0" tags="covid vaccine" title="New Vaccine History" type="text/vnd.tiddlywiki">
+<div bag="default" created="20200723075438193" modified="20230830045339892" revision="0" title="New Vaccine History" type="text/vnd.tiddlywiki">
 <pre>Let me just give you one data point. ''In the last quarter century, there have only been seven, truly new vaccines introduced globally at the clinical practice. When I say new, that means that they were effective against a pathogen for which there had previously been no vaccine. They're only seven in the last quarter century, Merck has four, the rest of the world has three.'' I don't mean to boast. And there are lots of things that we've been working on since the eighties. We've been trying to get an HIV vaccine since the 1980s and we've been unsuccessful.
 
 Merck CEO Ken Frazier
