Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -9732,8 +9732,8 @@ Error message and password prompt
 <div created="20200723114511720" modified="20200725045224358" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Tags</pre>
 </div>
-<div created="20200723113655040" modified="20230830045325543" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/Open</pre>
+<div created="20200723113655040" modified="20231021111420261" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/Tools</pre>
 </div>
 <div created="20200726072840939" modified="20230722114213179" title="$:/state/toc/Contents-Advice-1637712383">
 <pre>open</pre>
@@ -9753,7 +9753,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20230830045327782" list="Home All [[New Vaccine History]]" modified="20230830045331260" title="$:/StoryList">
+<div created="20231021111421937" list="$:/ControlPanel Home Recipes" modified="20231021111700785" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200723115340068" modified="20200723115349355" title="$:/temp/advancedsearch">
@@ -9997,10 +9997,12 @@ Daniel C. Dennett, Consciousness Explained</pre>
 <div created="20200726072807311" modified="20200726073018686" tags="Contents" title="Quotes">
 <pre>&lt;&lt;list-links &quot;[tag[Quotes]]&quot;&gt;&gt;</pre>
 </div>
-<div created="20200723115535321" modified="20200725044040851" tags="" title="Recipes">
+<div created="20200723115535321" modified="20231021111710223" tags="" title="Recipes">
 <pre>&lt;&lt;list-links &quot;[tag[recipe]]&quot;&gt;&gt;
 
-[[Home]]</pre>
+[[Home]]
+
+TBC...</pre>
 </div>
 <div created="20200723114952332" modified="20200723115014722" tags="" title="Sturgeon's law">
 <pre>Ninety percent of everything is crap
