--- a/index.html
+++ b/index.html
@@ -9753,7 +9753,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20231021111421937" list="$:/ControlPanel Home Recipes" modified="20231021111700785" title="$:/StoryList">
+<div created="20240114100442895" list="$:/ControlPanel Home Recipes" modified="20240114100455944" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200723115340068" modified="20200723115349355" title="$:/temp/advancedsearch">
@@ -9997,12 +9997,13 @@ Daniel C. Dennett, Consciousness Explained</pre>
 <div created="20200726072807311" modified="20200726073018686" tags="Contents" title="Quotes">
 <pre>&lt;&lt;list-links &quot;[tag[Quotes]]&quot;&gt;&gt;</pre>
 </div>
-<div created="20200723115535321" modified="20231021111710223" tags="" title="Recipes">
+<div created="20200723115535321" modified="20240114100503770" tags="" title="Recipes">
 <pre>&lt;&lt;list-links &quot;[tag[recipe]]&quot;&gt;&gt;
 
 [[Home]]
 
-TBC...</pre>
+TBC...
+:)</pre>
 </div>
 <div created="20200723114952332" modified="20200723115014722" tags="" title="Sturgeon's law">
 <pre>Ninety percent of everything is crap
