--- a/index.html
+++ b/index.html
@@ -9732,7 +9732,7 @@ Error message and password prompt
 <div created="20200723114511720" modified="20200725045224358" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Tags</pre>
 </div>
-<div created="20200723113655040" modified="20231021111420261" title="$:/state/tab/sidebar--595412856">
+<div created="20200723113655040" modified="20240407112259551" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/Tools</pre>
 </div>
 <div created="20200726072840939" modified="20230722114213179" title="$:/state/toc/Contents-Advice-1637712383">
@@ -9753,7 +9753,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20240114100442895" list="$:/ControlPanel Home Recipes" modified="20240114100455944" title="$:/StoryList">
+<div created="20240407112301786" list="$:/ControlPanel Home" modified="20240407112301786" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200723115340068" modified="20200723115349355" title="$:/temp/advancedsearch">
