--- a/index.html
+++ b/index.html
@@ -9723,8 +9723,8 @@ Error message and password prompt
 <div created="20200723095304272" modified="20200916114521540" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
-<div created="20200723095306405" modified="20200916114524919" title="$:/state/tab-2065006209">
-<pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
+<div created="20200723095306405" modified="20240630122457261" title="$:/state/tab-2065006209">
+<pre>$:/core/ui/ControlPanel/Saving/GitLab</pre>
 </div>
 <div created="20200725033610982" modified="20200725033627148" title="$:/state/tab-370012239">
 <pre>$:/core/ui/TiddlerInfo/References</pre>
@@ -9753,7 +9753,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20240630122432688" list="$:/ControlPanel Home" modified="20240630122432688" title="$:/StoryList">
+<div created="20240630122455531" list="$:/ControlPanel Home All Advice [[Writing Tip]]" modified="20240630122558424" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200723115340068" modified="20200723115349355" title="$:/temp/advancedsearch">
@@ -9960,13 +9960,15 @@ do all of the heavy lifting.
 
 Refactoring UI</pre>
 </div>
-<div created="20200725033150935" modified="20200819051216888" tags="" title="Home">
+<div created="20200725033150935" modified="20240630122609830" tags="" title="Home">
 <pre>View [[All]]
 
 * [[Recipes]]
 * [[Advice]]
 * [[Quotes]]
-* [[Book Notes]]</pre>
+* [[Book Notes]]
+
+End</pre>
 </div>
 <div created="20200916114415550" modified="20230722114219860" tags="Quotes" title="Murray Gell-Mann Amnesia Effect">
 <pre>Media carries with it a credibility that is totally undeserved. You have all experienced this, in what I call the Murray Gell-Mann Amnesia effect. (I call it by this name because I once discussed it with Murray Gell-Mann, and by dropping a famous name I imply greater importance to myself, and to the effect, than it would otherwise have.)
